apps/web/src/components/transactions/TxDetails/styles.module.css
.container {
  display: flex;
  width: 100%;
  overflow-x: auto;
}

.detailsWrapper {
  position: relative;
}

.details {
  width: 66.6%;
  display: flex;
  flex-direction: column;
  position: relative;
}

.shareLink {
  display: flex;
  justify-content: flex-end;
  margin: var(--space-1);
  margin-bottom: -40px;
}

.inlineSimulation {
  display: flex;
  justify-content: flex-end;
  margin: var(--space-2);
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1;
}

.txNote {
  margin: var(--space-1) 0;
  padding: 0 var(--space-2) var(--space-2);
  border-bottom: 1px solid var(--color-border-light);
}

.txNote:empty {
  display: none;
}

.loading,
.error,
.txData,
.txSummary,
.advancedDetails,
.txModule {
  padding: var(--space-2);
}

.txData {
  border-bottom: 1px solid var(--color-border-light);
}

.txData:empty {
  display: none;
}

.txSummary,
.advancedDetails {
  height: 100%;
}

.txSigners {
  display: flex;
  width: 33.3%;
  flex-direction: column;
  padding: var(--space-3);
  border-left: 1px solid var(--color-border-light);
  gap: var(--space-2);
}

.delegateCall .alert {
  width: fit-content;
  padding: 0 var(--space-1);
}

.multiSend {
  border-bottom: 1px solid var(--color-border-light);
}

.buttons {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: var(--space-1);
}

.buttons > * {
  flex: 1;
}

.buttons button {
  width: 100%;
}

@media (max-width: 599.95px) {
  .container {
    flex-direction: column;
  }

  .details {
    width: 100%;
  }

  .txSigners {
    width: 100%;
    border-left: 0;
    border-top: 1px solid var(--color-border-light);
  }
}

@media (max-width: 1350px) {
  .inlineSimulation {
    position: relative;
  }
}

